k8s-manifests/aks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tm-mcp-server
  namespace: tm-mcp-server
  labels:
    app: tm-mcp-server
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1    
  selector:
    matchLabels:
      app: tm-mcp-server
  template:
    metadata:
      labels:
        app: tm-mcp-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        
      nodeSelector:
        agentpool: tmmainapps
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "main-tm-apps"
          effect: "NoSchedule"

      containers:
      - name: tm-mcp-server
        image: tmmcpregistry-hjata4hfarb4fqfa.azurecr.io/tm-mcp-server:2025-09-04-397f185
        imagePullPolicy: IfNotPresent
        command: ["npm"]
        args: ["run", "start:http:openai"]
        ports:
        - containerPort: 3000
          name: http
        workingDir: /app
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      restartPolicy: Always
